--- a/scraper_template/{{module_name}}/README.md.jinja
+++ b/scraper_template/{{module_name}}/README.md.jinja
@@ -1,5 +1,5 @@
 # {{ display_name }}
 
-**Contact:** {{contact_name}} <{{contact_email}}>
+**Contact:** {{contact_name}} ({{contact_email}})
 
 {{ description.replace("\n", "\n\n") }}
