🐛 Fix crash when description is empty

--- a/scraper_template/{{module_name}}/README.md.jinja
+++ b/scraper_template/{{module_name}}/README.md.jinja
@@ -2,4 +2,4 @@
 
 **Contact:** {{contact_name}} ({{contact_email}})
 
-{{ description.replace("\n", "\n\n") }}
+{{ (description or "").replace("\n", "\n\n") }}
